Tims milestone update

--- a/Scratch Files/PositiveNegative_count_zscore.ipynb
+++ b/Scratch Files/PositiveNegative_count_zscore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "max    10277.000000  309.00000  944.000000  883.000000  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "max    49056.000000  43952.000000  1058.000000  10277.000000  2.441779e+01  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
        "[682 rows x 16 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3660,7 +3660,7 @@
        "[682 rows x 17 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3681,7 +3681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -5205,7 +5205,7 @@
        "[682 rows x 18 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5221,7 +5221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5252,10 +5252,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x20c74ea9fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x18904d293c8>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5263,7 +5263,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAD3CAYAAAD/oDhxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEdJJREFUeJzt3X2QXXV9x/H3JhsSopvMOq5SH0bGqt/JOOIDWh9iJDIC\n0pqJ0genClpTeagoapmRp9CZzoTiA9CaqlUXY8TH0aAIKBorAiFSQdQZo/jFoLUzHbURQ7IYEkmy\n/eOcba/L7s257J5zLpv3a4aZc87v3r0fDof97O+ec88dGB8fR5J0eJvXdgBJUvssA0mSZSBJsgwk\nSVgGkiRgsO0AD8eOHWMP+xKo4eHF7Ny5ZzbjzApz9cZcvevXbObqzUxyjYwMDUw3dtjNDAYH57cd\nYUrm6o25etev2czVm7pyHXZlIEl6KMtAkmQZSJIsA0kSloEkCctAkoRlIEnCMpAkYRlIkniE3o5i\nJlad++XWXnvD+ce39tqS1I0zA0mSZSBJsgwkSVgGkiQsA0kSloEkCctAkoRlIEnCMpAkYRlIkrAM\nJElYBpIkLANJEpaBJAnLQJJEzd9nEBHfA3aXqz8HLgE2AuPANuDszDwYEacDZwL7gXWZeX2duSRJ\nf6i2MoiIRcBAZq7s2HYtsDYzb4qIDwOrI+I24Bzg+cAi4NaI+EZm7qsrmyTpD9U5M3g2sDgiNpev\ncyFwLHBzOX4DcCJwANha/vLfFxHbgWOAO2rMJknqUGcZ7AEuA64Enk7xy38gM8fL8TFgKbAE2NXx\nvInt0xoeXszg4PxZD1y3kZGhGY23xVy96ddc0L/ZzNWbOnLVWQZ3A9vLX/53R8S9FDODCUPAfRTn\nFIam2D6tnTv3zHLUZuzYMTbt2MjIUNfxtpirN/2aC/o3m7l6M5Nc3UqkzquJ1gCXA0TEEyhmAJsj\nYmU5fjKwBbgdWBERiyJiKbCM4uSyJKkhdc4MPgZsjIhbKa4eWgP8BhiNiCOAu4BNmXkgItZTFMM8\n4KLM3FtjLknSJLWVQWb+HnjdFEPHTfHYUWC0riySpO780JkkyTKQJFkGkiQsA0kSloEkCctAkoRl\nIEnCMpAkYRlIkrAMJElYBpIkLANJEpaBJAnLQJKEZSBJwjKQJGEZSJKwDCRJWAaSJCwDSRKWgSQJ\ny0CShGUgScIykCRhGUiSsAwkSVgGkiQsA0kSloEkCctAkgQM1vnDI+JxwJ3ACcB+YCMwDmwDzs7M\ngxFxOnBmOb4uM6+vM5Mk6aFqmxlExALgI8AD5aYrgLWZuQIYAFZHxFHAOcBy4CTg0ohYWFcmSdLU\n6pwZXAZ8GLigXD8WuLlcvgE4ETgAbM3MfcC+iNgOHAPc0e0HDw8vZnBwfi2h6zQyMjSj8baYqzf9\nmgv6N5u5elNHrlrKICL+BtiRmV+PiIkyGMjM8XJ5DFgKLAF2dTx1YntXO3fumcW0zdmxY2zasZGR\noa7jbTFXb/o1F/RvNnP1Zia5upVIXTODNcB4RLwCeA5wFfC4jvEh4D5gd7k8ebskqUG1lEFmvmxi\nOSJuAs4C3hcRKzPzJuBk4FvA7cAlEbEIWAgsozi5LElqUK1XE01yLjAaEUcAdwGbMvNARKwHtlCc\nzL4oM/c2mEmSRANlkJkrO1aPm2J8FBitO4ckaXp+6EySZBlIkiwDSRKWgSQJy0CShGUgScIykCRh\nGUiSsAwkSVgGkiQsA0kSloEkCctAkkTFu5ZGxFeBjwPXZOaD9UaSJDWt6szg3cArgZ9GxAcj4gU1\nZpIkNazSzCAzbwFuiYgjgb8Aro6I3cCVwL+VX2gvSXqEqnzOICJWAh8A/gn4GvB24Cjg2lqSSZIa\nU/WcwS+An1GcN3hrZj5Qbr8JuKO2dJKkRlSdGRwPvDYzrwKIiKcBZOaBzHxeXeEkSc2oWgZ/RvHW\nEMDjgOsi4ox6IkmSmla1DM4AVgBk5i+AY4G31RVKktSsqmWwAOi8Yuj3wPjsx5EktaHSCWTgGuDG\niPh8uX4KXkUkSXNGpZlBZp4HrAcCeCqwPjPX1hlMktScXu5NdBfweYpZwm8j4mX1RJIkNa3q5ww+\nCKwC7unYPE5xyakk6RGu6jmDE4GY+LCZJGluqfo20c+AgTqDSJLaU3Vm8FvgxxHxbWDvxMbMXFNL\nKklSo6qWwdf4/08gVxIR84FRiiuQxoGzKIpkY7m+DTg7Mw9GxOnAmcB+YF1mXt/La0mSZqbqpaWf\nAG4GfgN8Gril3NbNqvK5y4G1wCXAFcDazFxB8bbT6og4CjgHWA6cBFwaEQsfxr+LJOlhqlQGEfFa\n4Drg/cBjgNsi4tRuz8nMayhuYwHwFOA+ittY3FxuuwF4BfAnwNbM3JeZu4DtwDE9/ntIkmag6ttE\n5wEvoZgR/E9EPBf4d+BT3Z6Umfsj4hPAayi+FOeEzJy4jcUYsBRYAuzqeNrE9mkNDy9mcHB+xej9\nY2RkaEbjbTFXb/o1F/RvNnP1po5cVcvgQGaORQQAmfnLiDhY5YmZ+caIOA/4DnBkx9AQxWxhd7k8\nefu0du7cUzF2f9mxY2zasZGRoa7jbTFXb/o1F/RvNnP1Zia5upVI1UtLfxQRbwUWRMRzIuKjwA+6\nPSEiTouIC8rVPcBB4LvlN6YBnAxsAW4HVkTEoohYCiyjOLksSWpI1TI4G3gi8ACwgeKv+bcc4jlf\nBJ4bEbcAXwfeUf6cf4yI24AjgE2Z+SuK+x5tAW4ELsrMvdP8TElSDSq9TZSZvwMuKP+ppHzOX00x\ndNwUjx2luAxVktSCqvcmOshDv7/gl5n5pNmPJElqWtWZwf+9nRQRC4BXAy+uK5QkqVm93MIagMx8\nMDO/gHcslaQ5o+rbRG/oWB0Anknx1ZeSpDmg6ucMXt6xPE5xW4rXzn4cSVIbqp4zeFPdQSRJ7an6\nNtHPeejVRFC8ZTSemU+d1VSSpEZVfZvoM8A+is8CPAi8HngBcFFNuSRJDapaBidl5vM71t8fEXdm\n5i/qCCVJalbVS0sHIuIVEysR8SqKW1JIkuaAqjODM4Cryi+iGQd+AryxtlSSpEZVvZroTuCZEfFY\nYG9m3l9vLElSk6p+09lTIuIbwG3AoyPixog4utZkkqTGVD1n8BHgfcD9wK+BzwJX1RVKktSsqmXw\n2MzcDJCZ4+Utp5fUF0uS1KSqZfBARDyJ8oNnEfFSis8dSJLmgKpXE70TuB7444j4AfAY4C9rSyVJ\nalTVMng8xSeOnwHMB36Smd61VJLmiKpl8N7M/ArwozrDSJLaUbUM7omIDcB3gAcmNmamVxRJ0hzQ\n9QRyRDyxXLyX4g6lL6L4boOXAytrTSZJasyhZgbXAc/LzDdFxLmZeXkToSRJzTrUpaUDHcuvrzOI\nJKk9hyqDzi+0GZj2UZKkR7SqHzqDqb/pTJI0BxzqnMEzI+Jn5fITO5b9uktJmkMOVQbPaCSFJKlV\nXcvAr7WUpMNDL+cMJElzlGUgSap8O4qeRMQCYANwNLAQWAf8GNhIcVXSNuDszDwYEacDZwL7gXWZ\neX0dmSRJ06trZnAqcG9mrgBeCXwAuAJYW24bAFZHxFHAOcBy4CTg0ohYWFMmSdI0apkZAF8ANpXL\nAxR/9R8L3FxuuwE4ETgAbM3MfcC+iNgOHAPcUVMuSdIUaimDzLwfICKGKEphLXBZZk58cG0MWErx\n1Zm7Op46sb2r4eHFDA7On9XMTRgZGZrReFvM1Zt+zQX9m81cvakjV10zAyLiycCXgA9l5mci4r0d\nw0PAfcDucnny9q527twzm1Ebs2PH2LRjIyNDXcfbYq7e9Gsu6N9s5urNTHJ1K5FazhlExOOBzcB5\nmbmh3Pz9iFhZLp8MbAFuB1ZExKKIWAosozi5LElqUF0zgwuBYeDiiLi43PZ2YH1EHAHcBWzKzAMR\nsZ6iGOYBF2Xm3poySZKmUdc5g7dT/PKf7LgpHjsKjNaRQ5JUjR86kyRZBpIky0CShGUgScIykCRh\nGUiSsAwkSVgGkiQsA0kSloEkCctAkoRlIEnCMpAkYRlIkrAMJElYBpIkLANJEpaBJAnLQJKEZSBJ\nwjKQJGEZSJKwDCRJWAaSJCwDSRKWgSQJy0CShGUgScIykCRhGUiSgME6f3hEvBB4T2aujIinARuB\ncWAbcHZmHoyI04Ezgf3Ausy8vs5MkqSHqm1mEBHvAq4EFpWbrgDWZuYKYABYHRFHAecAy4GTgEsj\nYmFdmSRJU6tzZnAPcArwyXL9WODmcvkG4ETgALA1M/cB+yJiO3AMcEe3Hzw8vJjBwfm1hK7TyMjQ\njMbbYq7e9Gsu6N9s5upNHblqK4PMvDoiju7YNJCZ4+XyGLAUWALs6njMxPaudu7cM1sxG7Vjx9i0\nYyMjQ13H22Ku3vRrLujfbObqzUxydSuRJk8gH+xYHgLuA3aXy5O3S5Ia1GQZfD8iVpbLJwNbgNuB\nFRGxKCKWAssoTi5LkhpU69VEk5wLjEbEEcBdwKbMPBAR6ymKYR5wUWbubTCTNKtWnfvl1l57w/nH\nt/baeuSrtQwy8z+BF5XLdwPHTfGYUWC0zhySpO780JkkyTKQJFkGkiQsA0kSloEkCctAkoRlIEnC\nMpAkYRlIkrAMJElYBpIkLANJEpaBJAnLQJKEZSBJwjKQJGEZSJJo9msvJWlOWPPuG1t77esuX13L\nz3VmIEmyDCRJloEkCctAkoRlIEnCMpAkYRlIkrAMJElYBpIkLANJEpaBJIk+uTdRRMwDPgQ8G9gH\nvDkzt7ebSpIOH/0yM3g1sCgzXwycD1zech5JOqz0Sxm8FPgaQGb+B/D8duNI0uFlYHx8vO0MRMSV\nwNWZeUO5/l/AUzNzf7vJJOnw0C8zg93AUMf6PItAkprTL2WwFfhTgIh4EfDDduNI0uGlL64mAr4E\nnBAR3wYGgDe1nEeSDit9cc5AktSufnmbSJLUIstAkmQZSJL65wTyrIqIFwLvycyVk7avAv4B2A9s\nyMzRJm+F0SXXXwPvKHP9EHhLZh6MiO9RXHYL8PPMrOXEepdc7wTeDOwoN50J/JQW91dEHAV8ruNh\nzwHOz8wP172/ImIBsAE4GlgIrMvMazvGWzm+KuRq5fiqkKuV46tbrpaPr/nAKBDAOHBWZm7rGK/1\n+JpzZRAR7wJOA343afsC4J+BF5RjWyPiWmA55a0wystaLwdWN5jrSGAd8KzM3BMRnwVeFRGbgYHJ\nv6CbylU6FnhDZt7Z8fhTaHF/ZeavgJXlY14MXAKMRsQi6t9fpwL3ZuZpEfEY4AfAxC+RNo+vbrna\nPL6mzVVq6/iaNlfLx9eqMsPyiFhZvvbqMkvtx9dcfJvoHuCUKbYvA7Zn5s7M/D1wK/AymrsVxnS5\n9gEvycw95fogsJei6RdHxOaIuLH8D91kLij+Z70gIm6NiAvKbW3vLwAiYgD4V+DvMvMAzeyvLwAX\nl8sDFH+hTWjz+OqWq83jq1suaO/4OlSuVo6vzLwGOKNcfQpwX8dw7cfXnCuDzLwaeHCKoSXAro71\nMWDpFNsPRMSsz5imy5WZBzPz1wAR8Tbg0cA3gD3AZcBJwFnAp5vMVfpc+drHAy+NiFfR8v7qsAr4\nUWZmuV77/srM+zNzLCKGgE3A2o7h1o6vbrnaPL4Osb+gpeOrQi5o4fgqs+2PiE9QFNGnO4ZqP77m\nXBl0MfmWF0MUzdv6rTAiYl5EXAacAPx5Zo4DdwOfyszxzLwbuBf4owYzDQD/kpm/Kf8S+QrwXPpg\nf5VOBT7asd7I/oqIJwPfAj6ZmZ/pGGr1+OqSq9Xja7pcbR9f3fZXqZXjCyAz3wg8g+LtqUeVm2s/\nvubcOYMu7gKeXr5HeD/FFOsyihM1q4DPt3grjI9QTOdfnZkHy21rgGcBb4mIJ1D8BfDLBjMtAbZF\nxDKK9yiPpzjpdiTt7y8opsPf7livfX9FxOOBzcBbM/Obk4ZbO74OkQtaOr4Okau146vC/oJ2jq/T\ngCdl5qUUM5GD5T/QwPE158sgIl4HPDozPxoRfw98nWJGtCEz/zsiWrkVxkQu4LvA3wJbgBsjAuD9\nwMeAjRFxK8V/8DVN/AU+aX9dSPHX0z7gm5n51fLqhdb2V5lrBNhd/oU7oYn9dSEwDFwcERPvOY8C\nj2r5+Jo2F+0eX4faX20dX4fK1dbx9UXg4xFxC7CA4gqw10REI7+/vB2FJOmwOmcgSZqGZSBJsgwk\nSZaBJAnLQJKEZSBJwjKQJAH/C6YT8MbpBxZtAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x20c74f568d0>"
+       "<matplotlib.figure.Figure at 0x18902f68a90>"
       ]
      },
      "metadata": {},
@@ -5280,7 +5280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -5300,7 +5300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -5619,7 +5619,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5635,7 +5635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -7408,7 +7408,7 @@
        "[682 rows x 23 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7423,7 +7423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -7459,10 +7459,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x20c74f2af98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x189061c2cc0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7470,7 +7470,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAD3CAYAAAD/oDhxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE2RJREFUeJzt3X2QXXV9x/H3JksSA5t0HVZTlQEd9dsM02gFn4gh0REC\nVYq2KFPFCkxDGINBhxlRE3U6E4oPSEvG56Ux4gz9wygUUqM4ChgiLUh1ajR8bYDamY7VFfOwGBJI\nsv3jnMVrkt29gXvOye59v2Yycx7u3f1+783cz/7O75x7ekZGRpAkdbdpTRcgSWqeYSBJMgwkSYaB\nJAnDQJIE9DZdwNMxNDQ8KU+B6u+fzY4de5ouo1bd1nO39Qv2PJkMDPT1jLXPkUGNenunN11C7bqt\n527rF+x5qjAMJEnVHSaKiIuBi8vVWcDLgdcB/wiMAFuBFZl5MCKWAcuB/cCazNxYVV2SpMNVNjLI\nzPWZuSQzlwAPACuBjwKrM3MR0AOcHxHzyn0LgaXAtRExs6q6JEmHq3wCOSJOB07NzBUR8THg7nLX\nJuBs4ACwJTP3AfsiYjuwALh/rJ/Z3z970h6zGxjoa7qE2nVbz93WL9jzVFDH2UQfBv6uXO7JzNEz\ngYaBucAcYFfL40e3j2kyzuJD8Z9naGi46TJq1W09d1u/YM+TyXgBVukEckT8ERCZeWe56WDL7j5g\nJ7C7XD50uySpJlWfTXQm8N2W9R9FxJJy+VxgM3AfsCgiZkXEXGA+xeSyJKkmVR8mCuDhlvWrgMGI\nmAFsAzZk5oGIWEsRDNOAVZm5t+K6JEkteibj/Qwm6xXIk/U44zPRbT13W79gz5PJeFcgT8qvo5CO\nVedd9S+N/e51H3xDY79bk59XIEuSDANJkmEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCcNAkoRh\nIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJKA3ip/eER8CPgLYAbwOeBu\nYD0wAmwFVmTmwYhYBiwH9gNrMnNjlXVJkv5QZSODiFgCnAEsBBYDJwHXA6szcxHQA5wfEfOAleXj\nlgLXRsTMquqSJB2uysNES4GfALcAtwMbgdMoRgcAm4A3Aq8CtmTmvszcBWwHFlRYlyTpEFUeJjoR\nOBl4M/BC4DZgWmaOlPuHgbnAHGBXy/NGt4+pv382vb3TO15wHQYG+pouoXbd2HMTmnydu/E9nmo9\nVxkGjwIPZuYTQEbEXopDRaP6gJ3A7nL50O1j2rFjT4dLrcfAQB9DQ8NNl1Grbuy5KU29zt34Hk/W\nnscLsCoPE90DnBMRPRHxPOB44LvlXALAucBm4D5gUUTMioi5wHyKyWVJUk0qGxlk5saIOJPiw34a\nsAJ4BBiMiBnANmBDZh6IiLUUwTANWJWZe6uqS5J0uEpPLc3MDxxh8+IjPG4QGKyyFknS2LzoTJJk\nGEiSDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiS\nMAwkSRgGkiQMA0kShoEkCcNAkoRhIEkCeqv84RHxH8DucvUR4BpgPTACbAVWZObBiFgGLAf2A2sy\nc2OVdUmS/lBlYRARs4CezFzSsu02YHVm3hURXwDOj4h7gZXA6cAs4J6I+E5m7quqNknSH6pyZPAy\nYHZE3FH+ng8DpwF3l/s3AWcDB4At5Yf/vojYDiwA7q+wNklSiyrDYA9wHXAj8BKKD/+ezBwp9w8D\nc4E5wK6W541uH1N//2x6e6d3vOA6DAz0NV1C7bqx5yY0+Tp343s81XquMgx+DmwvP/x/HhGPUowM\nRvUBOynmFPqOsH1MO3bs6XCp9RgY6GNoaLjpMmrVjT03panXuRvf48na83gBVuXZRJcCnwaIiOdR\njADuiIgl5f5zgc3AfcCiiJgVEXOB+RSTy5KkmlQ5MvgnYH1E3ENx9tClwG+AwYiYAWwDNmTmgYhY\nSxEM04BVmbm3wrokSYeoLAwy8wngHUfYtfgIjx0EBquqRZI0Pi86kyQZBpIkw0CShGEgScIwkCRh\nGEiSMAwkSRgGkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEm0eT+DiPgm8GXg1sx8stqSJEl1\na3dk8HHgHOC/IuKzEfHKCmuSJNWsrZFBZn4f+H5EPAu4APh6ROwGbgQ+n5n7KqxRklSxtucMyhvZ\nfwb4e+BbwJXAPOC2SiqTJNWm3TmDXwAPU8wbXJGZj5fb7wLur6w6SVIt2h0ZvAG4MDNvAoiIFwNk\n5oHMfEVVxUmS6tFuGLyJ4tAQwHOA2yPismpKkiTVrd0wuAxYBJCZvwBOA95bVVGSpHq1NWcAHAe0\nnjH0BDAy0ZMi4jnAA8BZwH5gffm8rcCKzDwYEcuA5eX+NZm5se3qJUkd0e7I4FbgexFxRURcAdzB\nBGcRRcRxwBeBx8tN1wOrM3MR0AOcHxHzgJXAQmApcG1EzDz6NiRJz0S71xlcHREXAIuBJ4G1mXnr\nBE+7DvgC8KFy/TTg7nJ5E3A2cADYUl6nsC8itgMLmOAMpf7+2fT2Tm+n9GPOwEBf0yXUrht7bkKT\nr3M3vsdTred2DxMBbAN+RfFXPRFxZnkx2mEi4mJgKDO/HRGjYdCTmaOHloaBucAcYFfLU0e3j2vH\njj1HUfaxY2Cgj6Gh4abLqFU39tyUpl7nbnyPJ2vP4wVYu9cZfBY4D3ioZfMIxSmnR3IpMBIRbwRe\nDtxEcRbSqD5gJ7C7XD50uySpRu2ODM4GYvRis4lk5pmjy+WFaZcDn4qIJZl5F3AucCdwH3BNRMwC\nZgLzKSaXJUk1ajcMHqY8PPQMXAUMRsQMikNOGzLzQESsBTZTTGavysy9z/D3SJKOUrth8FvgZxHx\nA+CpD+vMvHSiJ2bmkpbVxUfYPwgMtlmHJKkC7YbBt/j9FciSpCmm3VNLvxIRpwCnAt8GTsrMR6os\nTJJUn7YuOouIC4HbgRuAZwP3RsRFVRYmSapPu1cgXw2cAQxn5q+BP+P3F5NJkia5dsPgQGY+dYVF\nZv4SOFhNSZKkurU7gfzT8juJjouIlwPvAX5cXVmSpDq1OzJYATyf4kvn1lFcOfyeqoqSJNWr3bOJ\nfkcxR+A8gSRNQe1+N9FBDr9/wS8z8wWdL0mSVLd2RwZPHU4q71PwFuC1VRUlSapXu3MGT8nMJzPz\na4z9jaWSpEmm3cNEf9Oy2kNxJfITlVQkSapdu6eWvr5leQT4DXBh58uRJDWh3TmDS6ouRJLUnHYP\nEz3C4WcTQXHIaCQzX9TRqiRJtWr3MNHNwD6K+w48CbwTeCWwqqK6JEk1ajcMlmbm6S3rN0TEA5n5\niyqKkiTVq91TS3vKm9sDEBFvpvhKCknSFNDuyOAy4KaImEcxd/Ag8O7KqpIk1ards4keAE6NiBOB\nvZn5WLVlSZLq1O6dzk6OiO8A9wInRMT3yttgSpKmgHbnDL4IfAp4DPgV8M/ATVUVJUmqV7tzBidm\n5h0R8YnMHAEGI2LFeE+IiOkUp6IGxTzD5cBeYH25vhVYkZkHI2IZsBzYD6zJzI1PqxtJ0tPS7sjg\n8Yh4AeWFZxHxOorrDsZzHkBmLgRWA9cA1wOrM3MRxQVr55eT0iuBhcBS4NqImHm0jUiSnr52w+D9\nwEbgJRHxY4qL0FaO94TMvJXiLCSAk4GdwGnA3eW2TcAbgVcBWzJzX2buArYDC46mCUnSM9PuYaLn\nUlxx/FJgOvBgZk74raWZuT8ivgK8FbgAOKs8zAQwDMwF5gC7Wp42un1M/f2z6e2d3mbpx5aBgb6m\nS6hdN/bchCZf5258j6daz+2GwScz81+Bnx7tL8jMd0fE1cC/A89q2dVHMVrYXS4fun1MO3bsOdoy\njgkDA30MDQ03XUaturHnpjT1OnfjezxZex4vwNoNg4ciYh3FB/rjoxszc8wziiLiXcALMvNaYA9w\nEPhhRCzJzLuAc4E7gfuAayJiFjATmE8xuSxJqsm4YRARz8/M/wUepZjwfU3L7hHGP730G8CXI+L7\nwHHA+4BtFGcizSiXN2TmgYhYC2ymmMNYlZl7n25DkqSjN9HI4HbgFZl5SURclZmfbvcHZ+bvgLcf\nYdfiIzx2kOI0VElSAyY6m6inZfmdVRYiSWrORGHQekObnjEfJUma1Nq9zgCOfKczSdIUMNGcwakR\n8XC5/PyWZW93KUlTyERh8NJaqpAkNWrcMPC2lpLUHY5mzkCSNEUZBpIkw0CSZBhIkjAMJEkYBpIk\nDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSSJie909rRExHHAOuAUYCawBvgZ\nsJ7iXspbgRWZeTAilgHLgf3AmszcWEVNkqSxVTUyuAh4NDMXAecAnwGuB1aX23qA8yNiHrASWAgs\nBa6NiJkV1SRJGkMlIwPga8CGcrmH4q/+04C7y22bgLOBA8CWzNwH7IuI7cAC4P6K6pIkHUElYZCZ\njwFERB9FKKwGrsvMkfIhw8BcYA6wq+Wpo9vH1d8/m97e6R2tuS4DA31Nl1C7buy5CU2+zt34Hk+1\nnqsaGRARJwG3AJ/LzJsj4pMtu/uAncDucvnQ7ePasWNPJ0utzcBAH0NDw02XUatu7LkpTb3O3fge\nT9aexwuwSuYMIuK5wB3A1Zm5rtz8o4hYUi6fC2wG7gMWRcSsiJgLzKeYXJYk1aiqkcGHgX7gIxHx\nkXLblcDaiJgBbAM2ZOaBiFhLEQzTgFWZubeimiRJY6hqzuBKig//Qy0+wmMHgcEq6pAktceLziRJ\nhoEkyTCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEk\nCcNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEtBb5Q+PiFcDn8jMJRHxYmA9MAJsBVZk5sGIWAYs\nB/YDazJzY5U1SZIOV9nIICI+ANwIzCo3XQ+szsxFQA9wfkTMA1YCC4GlwLURMbOqmiRJR1blyOAh\n4C+Br5brpwF3l8ubgLOBA8CWzNwH7IuI7cAC4P7xfnB//2x6e6dXUnTVBgb6mi6hdt3YcxOafJ27\n8T2eaj1XFgaZ+fWIOKVlU09mjpTLw8BcYA6wq+Uxo9vHtWPHnk6VWauBgT6GhoabLqNW3dhzU5p6\nnbvxPZ6sPY8XYHVOIB9sWe4DdgK7y+VDt0uSalRnGPwoIpaUy+cCm4H7gEURMSsi5gLzKSaXJUk1\nqvRsokNcBQxGxAxgG7AhMw9ExFqKYJgGrMrMvTXWJEmi4jDIzP8GXlMu/xxYfITHDAKDVdYhSRqf\nF51JkgwDSZJhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaS\nJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSUBv0wUARMQ04HPAy4B9wN9m5vZmq5Kk7nGsjAze\nAszKzNcCHwQ+3XA9ktRVjpUweB3wLYDM/Dfg9GbLkaTu0jMyMtJ0DUTEjcDXM3NTuf4/wIsyc3+z\nlUlSdzhWRga7gb6W9WkGgSTV51gJgy3AnwNExGuAnzRbjiR1l2PibCLgFuCsiPgB0ANc0nA9ktRV\njok5A0lSs46Vw0SSpAYZBpIkw0CSdOxMIE8ZEXEcsA44BZgJrMnM21r2vxK4nmKi/P+AizJzbwOl\ndkwbPb8TuAo4AKzLzM83UWcnRcR0YBAIYAS4PDO3tuw/D/gosJ+i58FGCu2gNnr+a+B9FD3/BHhP\nZh5sotZOmajnlsd9CfhtZn6w5hI7xpFB510EPJqZi4BzgM+M7oiIHor/WJdk5uhV1yc3UmVnjdlz\n6TrgjcBC4KqI6K+5viqcB5CZC4HVwDWjO8pw/AfgbGAxcFlEPLeJIjtsvJ6fBawBXl/unwu8uYki\nO2zMnkdFxHLgT2uuq+MMg877GvCRcrmH4q+kUS8FHgXeHxF3A8/OzKy5viqM1zPAf1J8OMwq90/6\nU9gy81bgsnL1ZGBny+75wPbM3JGZTwD3AGfWXGLHTdDzPuCMzNxTrvcCk3rECxP2TEScAbwa+GLN\npXWch4k6LDMfA4iIPmADxV8To04EzgCuALYDGyPih5n5vdoL7aAJegbYCjwA/A74RmbuZArIzP0R\n8RXgrcAFLbvmALta1ocpwnDSG6vn8nDQrwAi4r3ACcB3Gimyw8bqOSL+GPhYuf3tDZXXMY4MKhAR\nJwF3Al/NzJtbdj1K8Rfjtsx8kuIw0ZT4Ur6xeo6IBcCbgBdSzCk8JyLe1kiRFcjMd1OM+AYj4vhy\n86Ffr9LHIX9RTmZj9ExETIuI64CzgL/KzEk/Ahw1Rs9vo/gD75sU37b8joi4uJkKnznDoMPKY8N3\nAFdn5rpDdj8MnBARLy7XFwE/rbO+KkzQ8y7gceDxzDwA/BqY9HMGEfGuiPhQuboHOFj+A9gGvCQi\nnh0RMygOEd3bQJkdNUHPUBwqmQW8peVw0aQ2Xs+ZuTYzT8vMJcDHgZszc30jhXaAVyB3WETcAFwI\nPNiyeRA4PjO/FBFvoPiP0wP8IDOvbKDMjmqj58uBS4EngIeAZeWx9Emr/Ovwy8A84DiK9/R44ISy\n59GziaZRnE302caK7ZDxegZ+WP7bzO/nhG7IzFsaKLVjJnqfWx53MfAnk/lsIsNAkuRhIkmSYSBJ\nwjCQJGEYSJIwDCRJGAaSJAwDSRLw/+96qZ6hws1iAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x20c74ecbeb8>"
+       "<matplotlib.figure.Figure at 0x18904d4b0b8>"
       ]
      },
      "metadata": {},
@@ -7484,6 +7484,51 @@
     "\n",
     "df['Total_words'].plot(kind='hist')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
