--- a/Scratch Files/ChiSq_DE.ipynb
+++ b/Scratch Files/ChiSq_DE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -22,6 +22,7 @@
     "from sklearn import metrics \n",
     "from sklearn.metrics import classification_report\n",
     "from scipy.stats import chi2_contingency\n",
+    "from Recoding_SIC_Codes_Tech import Tech\n",
     "\n",
     "from sklearn.cross_validation import cross_val_score\n",
     "%matplotlib inline\n"
@@ -29,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#read in data and update data type to boolean for C2\n",
-    "ipo_data = pd.read_excel(\"Competation #1 Raw Data_New.xlsx\",header=0,na_values='-' )\n",
+    "ipo_data = pd.read_excel(\"Competition #1 Raw Data_UPDATED I3.xlsx\",header=0,na_values='-' )\n",
     "ipo_data.C2 = ipo_data.C2.astype(bool)\n",
     "\n",
     "#replace missing values with mean\n",
@@ -52,53 +53,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ipo_data.describe()"
+    "ipo_data['Tech'] = ipo_data.apply(Tech, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c2_tech 0.0972094015437 0.755204515231\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(len(ipo_data.columns)):\n",
-    "    if ipo_data.iloc[:,i].dtype == float:\n",
-    "        chi2, p, dof, expected = chi2_contingency(ipo_data.iloc[:,i])\n",
-    "    \n",
-    "print(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def categories(series):\n",
-    "    return range(int(series.min()), int(series.max()) + 1)\n",
-    "\n",
-    "\n",
-    "def chi_square_of_df_cols(ipo_data, C5, T1):\n",
-    "    ipo_data_C5, ipo_data_T1 = ipo_data[C5], ipo_data[T1]\n",
-    "\n",
-    "    result = [[sum((ipo_data_C5 == cat1) & (ipo_data_T1 == cat2))\n",
-    "               for cat2 in categories(ipo_data_T1)]\n",
-    "              for cat1 in categories(ipo_data_C5)]\n",
-    "\n",
-    "    return scs.chi2_contingency(result)\n",
-    "\n",
-    "\n",
-    "print(chi_square_of_df_cols(ipo_data, 'C5', 'T1'))"
+    "##Create Crosstab of categorical columns\n",
+    "c2_tech = pd.crosstab(ipo_data['C2'],ipo_data['Tech'])\n",
+    "#run chi2 test on crosstab\n",
+    "chi2, p, dof, expected = chi2_contingency(c2_tech)\n",
+    "print('c2_tech',chi2,p)"
    ]
   },
   {
