--- a/Scratch Files/Model Version Control/model 4.ipynb
+++ b/Scratch Files/Model Version Control/model 4.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -78,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -366,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -482,13 +488,61 @@
     "        if (row['I3']> 1999 and row['I3']< 4000):\n",
     "            return 'Manufacturing'\n",
     "        else:\n",
-    "            return 'Other'"
+    "            return 'Other'\n",
+    "    elif method==3:\n",
+    "        if (row['I3']> 7369 and row['I3']< 7375) :\n",
+    "            return 'Tech'\n",
+    "        else:\n",
+    "            return 'NonTech'\n",
+    "    elif method==4:\n",
+    "        if (row['I3']> 1999 and row['I3']< 4000):\n",
+    "            return 'Manufacturing' # Manufacturing\n",
+    "        elif (row['I3']> 3999 and row['I3']< 5000):\n",
+    "            return 'Services' # Tech Comms etc Services\n",
+    "        elif (row['I3']> 6999 and row['I3']< 9000):\n",
+    "            return 'Services' #Services (combining with above)\n",
+    "        else:\n",
+    "            return 'Other' # All Other\n",
+    "    elif method==5:\n",
+    "        if(row['I3']> 1999 and row['I3']< 4000):\n",
+    "            return 'Manufacturing'\n",
+    "        elif (row['I3']> 3999 and row['I3']< 5000):\n",
+    "            return 'Services' #TCEGS\n",
+    "        elif (row['I3']> 4999 and row['I3']< 5200):\n",
+    "            return 'Trade' #wholesale\n",
+    "        elif (row['I3']> 5199 and row['I3']< 6000):\n",
+    "            return 'Trade' #retail\n",
+    "        elif (row['I3']> 6999 and row['I3']< 9000):\n",
+    "            return 'Services'\n",
+    "        else:\n",
+    "            return 'Other'\n",
+    "    elif method==6:\n",
+    "        if(row['I3']> 1999 and row['I3']< 4000):\n",
+    "            return 'Manufacturing'\n",
+    "        elif (row['I3']> 3999 and row['I3']< 5000):\n",
+    "            return 'TCEGS' \n",
+    "        elif (row['I3']> 4999 and row['I3']< 5200):\n",
+    "            return 'Trade' #wholesale\n",
+    "        elif (row['I3']> 5199 and row['I3']< 6000):\n",
+    "            return 'Trade' #retail\n",
+    "        elif (row['I3']> 6999 and row['I3']< 9000):\n",
+    "            return 'Services'\n",
+    "        else:\n",
+    "            return 'Other'\n",
+    "    elif method==7:\n",
+    "        if (row['I3']> 99 and row['I3']< 5000):\n",
+    "            return 'Manual Labor'\n",
+    "        else: \n",
+    "            return 'NonManual Labor'\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -535,7 +589,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -854,7 +910,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1175,7 +1233,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1955,7 +2015,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2627,7 +2689,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3301,7 +3365,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3988,7 +4054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
