--- a/Scratch Files/Finished Report.ipynb
+++ b/Scratch Files/Finished Report.ipynb
@@ -240,7 +240,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "### Variable Creation\n",
@@ -254,6 +254,15 @@
     " 2. C5x - Continuous/Float variable, representing the share overhang\n",
     " 3. C6x - Continuous/Float variable, representing the up revision\n",
     " \n",
+    "#### Industry Binning by SEC Codes\n",
+    "Multiple variations of SEC have been tried. These include the following:\n",
+    "1. Split according to SEC codes provided\n",
+    "2. Manufacturing and Other\n",
+    "3. Tech and Nontech\n",
+    "4. Manufacturing and Services\n",
+    "5. Manufacturing, Trade, and Services\n",
+    "6. Manufacturing, Retail, Wholesale, and Services\n",
+    "\n",
     "Additionally, we also converted all our count variables in *T1*-*T5* and *S1*-*S3* into ratios for better statisitic analysis.\n",
     " \n",
     " [New Variable Creation](https://github.com/ConorFeeney/IS540-Code/blob/master/new_var.py) "
@@ -927,11 +936,8 @@
     "\n",
     "This report was written as a team. Danielle wrote the initial first draft, with particular emphasis on her tasks. Tim re-drafted Danielles report and added information to his tasks, Conor completed final draft and added information to his completed tasks.\n",
     "\n",
-    "#### Future Tasks\n",
-    "* Tim: Creation of dummy variables for Days, I3 and binning of variables discussed in normalisation. Taking over of Logistic Regression model to improve using these results\n",
-    "* Danielle: Completing correlation analysis, aiding Tim in logistic regression model as needed, researching and implementing another model generation method (Naive Bayes / Neural network)\n",
-    "* Conor: Passing over of logistic regression code, tidying of standardisation program, creating code for decision tree and potentionally one other method\n",
-    "\n"
+    "#### Works Cited APA\n",
+    "Arthurs, Jonathan D. and Busenitz, Lowell W. and Hoskisson, Robert E. and Johnson, Richard, Signaling in New Ventures: The Use and Impact of the Lockup Period at the Time of the Initial Public Offering (2005). Babson College Entrepreneurship Research Conference (BCERC), 2005. Available at SSRN: https://ssrn.com/abstract=1508538 "
    ]
   },
   {
@@ -941,7 +947,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
